# Wireless_Sensor_Network_Prj

Gateway/: CMakeLists.txt  sdkconfig
Gateway/common/dht11/: CMakeLists.txt  dht11.c  dht11.h
Gateway/common/http_server_app/: CMakeLists.txt  http_server_app.c  http_server_app.h
Gateway/html/: index.html
Gateway/main/: CMakeLists.txt  app_main.c
Node_Sensor/: .gitignore  CMakeLists.txt
Node_Sensor/common/DHT22/: CMakeLists.txt  DHT22.c  DHT22.h  README.md
Node_Sensor/common/sx1278_ra02/: CMakeLists.txt  ra02.c  ra02.h
Node_Sensor/main/: CMakeLists.txt  app_main.c
